adicao de api nocodeform

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="box">
-    <form action="" autocomplete="off" method="post">
+    <form action="https://nocodeform.io/f/652c47d8740c4eca46dda508" autocomplete="off" method="post">
       <fieldset>
         <legend>Cadastro de Usuário</legend>
         <div class="inputBox">
@@ -24,13 +24,13 @@
           <label for="phone" class="labelInput">Telefone</label>
         </div>
         <p>Sexo:</p>
-          <input type="radio" name="sexo" id="masc" required>
+          <input type="radio" name="sexo" id="masc" value="M" required>
           <label for="masc">Masculino</label>
           <br>
-          <input type="radio" name="sexo" id="fem" required>
+          <input type="radio" name="sexo" id="fem" value="F" required>
           <label for="fem">Feminino</label>
           <br>
-          <input type="radio" name="sexo" id="outro" required>
+          <input type="radio" name="sexo" id="outro" value="O" required>
           <label for="outro">Outro</label>
           <br> <br>
         <div class="inputBox">
@@ -41,5 +41,5 @@
       </fieldset>
     </form>
   </div>
-</body>
+ </body>
 </html>
